--- a/assets/css/nmsu.css
+++ b/assets/css/nmsu.css
@@ -29,6 +29,10 @@
 @media (max-width: 767px)  { /* fix for portrait iPads and other viewports exactly 768px wide */
     #search-stack { margin-top: 0; float: none; }
 }
+@media (max-width: 400px) { 
+    #main-navigation .navbar-brand { padding: 16px 10px 5px 15px; } 
+    #main-navigation .navbar-brand img { width: 235px; } 
+}
 .navbar-toggle { background-color: #721e3d; color: #fff}
 .navbar-toggle .icon-bar { background-color: #fff; color: #000; }
 #sidebar a { margin-bottom: 0.35em; }
@@ -52,7 +56,7 @@
 @media (max-width: 768px)  { .breadcrumb>li {margin-bottom: 5px; } }
 
 /* Affix */
-.affix-bottom { position: absolute; }  /* to prevent JQuery offset() from setting position in style */
+.affix-bottom { position: absolute; z-index: 1030; }  /* to prevent JQuery offset() from setting position in style and to keep navbar on top of content even at bottom */
 
 /* Affix Top */
 #affix-nav { width: 100%; margin: -2.35em 0 0; }
@@ -89,6 +93,7 @@
 }
 
 /**** Footer ****/
+body > footer { margin-top: 20px; }
 #footer-top { padding: 100px 0 100px; }
 
 /**** Content-level Brand Design Elements ****/
