Fixes for site navigation styles and examples.
Removed styles to shrink and de-emphasize site navigation links.
Updated examples site navigation to work well in new styling.

--- a/assets/css/nmsu.css
+++ b/assets/css/nmsu.css
@@ -95,12 +95,12 @@
 }
 @media (max-width: 1200px) { 
     #main-navigation .navbar-nav li a {
-        font-size: 0.9em; padding: 10px 12px; 
+        padding: 10px 10px; 
     } 
 }
 @media (max-width: 992px)  { 
     #main-navigation .navbar-nav li a {
-        font-size: 0.8em; padding: 10px 8px; 
+        padding: 10px 8px; 
     } 
 }
 @media (max-width: 768px)  {
