--- a/assets/css/nmsu.css
+++ b/assets/css/nmsu.css
@@ -1,12 +1,22 @@
-body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: "Open Sans", "Helvetica", sans-serif;
-}
-
 /*
  *** Masthead ***
  */
 body.fixed-header {
     margin-top: 60px;
+}
+#fixed-masthead {
+    background-color: #882345; 
+}
+#fixed-navbar-header {
+    border: none;
+}
+#navbar-brand {
+    height: auto;
+}
+#navbar-header-toggle {
+    position: fixed; 
+    top: 0; 
+    right: 0;
 }
 #navbar-dept-link {
     display: block;
@@ -14,13 +24,14 @@ body.fixed-header {
     line-height: 20px;
     color: #fff;
 }
-#navbar-header-toggle {
-    position: fixed; 
-    top: 0; 
-    right: 0;
-}
 #navbar-header-toggle:hover, #navbar-header-toggle:active, #navbar-header-toggle:focus {
     color: #000;
+}
+#navbar-collapse, #site-search {
+    border:none; 
+    box-shadow: none; 
+    -webkit-box-shadow: none; 
+    padding:5px 15px;
 }
 @media (min-width: 768px) {
     body.fix-top #navbar-dept-link {
@@ -66,7 +77,7 @@ body.fixed-header {
         line-height: 1.25em;
     }
     #navbar-dept-link {
-        margin-left: 31px !important;
+        margin-left: 38px !important;
         margin-top: 5px;
         font-size: 13px;
     }
@@ -80,69 +91,35 @@ body.fixed-header {
         padding-left: 0;
     }
 }
-
-#mosaic { 
-    position:absolute; 
-    top:0; 
-    right: 0; 
-    max-width: 50%; 
-}
-#mosaic-low { 
-    margin-top: -36px; 
-    max-width: 60%; 
-}
-#masthead { 
-    background-image: url("../images/swoosh-reg.png"); 
-    background-repeat: repeat-x; min-height: 120px; 
-}
-#masthead .h1, 
-#masthead h1 { 
-    display: inline-block; 
-}
-#masthead .h1 a img, 
-#masthead h1 a img { 
-    float: left; 
-}
-#masthead .h1 small, 
-#masthead .h1 small { 
-    float: left; 
-    color: #fff; 
-    font-size: 40%; 
-    font-weight: 700; 
-}
-#masthead .h1 a small:hover, 
-#masthead h1 a small:hover {
-    text-decoration: underline; 
-}
-
-/* Masthead Links */
-#masthead-links .navbar-nav {
-    margin-bottom: -30px;       /* Pull masthead up into element all but 8px.  Font size adjustments client-side may cause overlap. */
-}
-#masthead-links .navbar-nav > li > a {
-    padding: 14px 9px 0; 
-    font-weight: bold; 
-    color: #fff; 
-    font-size: 0.8em; 
-    z-index: 1030;
-} 
-#masthead-links .navbar-nav > li > a:hover,
-#masthead-links .navbar-nav > li > a:focus {
-    background-color: transparent; 
-    color: #df7a00; 
-} 
-#masthead .nav .open>a, 
-#masthead .nav .open>a:hover, 
-#masthead .nav .open>a:focus {
-    background-color: transparent; 
-    color: #df7a00; 
-}
 @media (max-width: 375px) {
     #nmsu-logo-xs {
         width: 200px;
     }
 }
 
+/* Masthead Links */
+#masthead-links .navbar-nav > li > a:hover,
+#masthead-links .navbar-nav > li > a:focus {
+    background-color: transparent; 
+    color: #df7a00; 
+} 
+#masthead-links {
+    margin-top: -10px;
+}
+#masthead-links .navbar-nav > li {
+    margin: 0 4px;
+}
+#masthead-links .navbar-nav > li > a {
+    padding: 0 4px;
+    font-weight: bold; 
+    color: #fff; 
+    font-size: 0.8em; 
+    z-index: 1030;
+}
+#masthead-links .dropdown-menu {
+    left:auto;
+    right: 0;
+}
 
 /***
  * Navigation ***
@@ -153,6 +130,7 @@ body.fixed-header {
 }  /* keep over top nav */
 #main-navigation {
     margin: 0; 
+    position: relative;
 }
 #main-navigation2 {
     background-color: #882345; 
@@ -169,26 +147,9 @@ body.fixed-header {
 #main-navigation .navbar-nav li .dropdown-menu li {
     margin: 0; 
     display: block; 
-}  
-#main-navigation .navbar-nav li a {
-    border-left: solid 1px #dadada; 
-}
-#main-navigation .navbar-nav li:last-of-type a {
-    border-right: solid 1px #dadada; 
 }
 #main-navigation, #main-navbar, #affix-nav {
     min-height: 0; 
-}
-#search-stack {
-    margin-top: -80px; 
-    float: right; 
-}
-#main-navigation .navbar-dept {
-    padding: 0 0 10px 45px;
-    color:  #fff;
-    font-weight: 700;
-    clear: left;
-    width: 90%;
 }
 @media (max-width: 1200px) { 
     #main-navigation .navbar-nav li a {
@@ -204,10 +165,6 @@ body.fixed-header {
     #main-navigation .navbar-nav {
         margin: 0;
         text-align: left;
-    }
-    #main-navigation .navbar-brand {
-        padding: 10px 0 0 15px; 
-        height: auto;
     }
     #main-navigation .navbar-nav li {
         display: block; 
@@ -230,22 +187,8 @@ body.fixed-header {
         color: #882345;
     }
 }
-@media (max-width: 767px)  {
-    /* fix for portrait iPads and other viewports exactly 768px wide */
-    #search-stack {
-        margin-top: 0; float: none; 
-    }
-}
-@media (max-width: 400px) {
-    #main-navigation .navbar-brand {
-        padding: 12px 0px 0px 15px; 
-    } 
-    #main-navigation .navbar-brand img {
-        width: 235px; 
-    } 
-}
 .navbar-toggle {
-    background-color: #721e3d; 
+    background-color: #671937; 
     color: #fff
 }
 .navbar-toggle .icon-bar {
@@ -307,6 +250,7 @@ body.fixed-header {
     font-family: "Glyphicons Halflings";
     content: "\E080"; 
     padding-right: 0.5em; 
+    color: #767676;
 }
 @media (max-width: 768px)  { 
     .breadcrumb>li, 
@@ -318,9 +262,8 @@ body.fixed-header {
 /* Affix */
 .affix-bottom {
     position: absolute; 
-    z-index: 1030; 
+    z-index: 1; 
 }  /* to prevent JQuery offset() from setting position in style and to keep navbar on top of content even at bottom */
-
 /* Affix Top */
 #affix-nav {
     width: 100%; 
@@ -346,7 +289,6 @@ body.fixed-header {
 #affix-nav a:hover {
     background-color: #444; 
 } 
-
 /* Affix Side */
 #affix-side-nav {
     margin-top: 3em; 
@@ -375,12 +317,13 @@ body.fixed-header {
 #affix-side-nav ul > li:not(.active) > ul {
     display: none; 
 }
-
+/* Scroll Top */
 #scroll-top {
     background: #ffcc33; 
     font-size: x-large; 
     border-top-left-radius:3px; 
     border-top-right-radius:3px; 
+    display: none;
 }
 #scroll-top.nav>li>a:focus {
     text-decoration: none;
@@ -487,7 +430,6 @@ section.spaced {        /* Imitating NMSU homepage styling */
 .navbar-header .navbar-brand {
     color: #fff; 
     font-weight: bold; 
-    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Tahoma, sans-serif; 
 }
 .navbar-header a.navbar-brand:hover {
     color: #fff; 
@@ -497,13 +439,19 @@ p {
     margin-bottom: 13px; 
 } /* Keep spacing between paragraphs consistent with line-height (1.5 * line-height (22.652px) - font-size (14px) = 12.98px) */
 p > a {
-    font-weight: 500; 
-} /* WCAG 2.0 criterion 1.4.1 requires anchors to have more visual distinction than simply color at contrast ratios under 3:1 */
+    font-weight: 700; /* WCAG 2.0 criterion 1.4.1 requires anchors to have more visual distinction than simply color at contrast ratios under 3:1 */
+    cursor: pointer;
+}
 
 /* Headers */
 h1 small, 
 .h1 small {
     display: block; 
+}
+h1 small, .h1 small, h2 small, .h2 small,
+h3 small, .h3 small, h4 small, .h4 small,
+h5 small, .h5 small, h6 small, .h6 small {
+    line-height: 1.25;
 }
 
 /* Figures */
@@ -640,7 +588,7 @@ a.inverted:hover {
 }
 
 /*
- *** Shims ***
+ *** Shims and Legacy Support ***
  */
 /* Responsive Table Fix for Firefox */
 @-moz-document url-prefix() {
@@ -731,8 +679,32 @@ a.inverted:hover {
 #breadcrumbs > li + li:before {
   content: "/\00a0";
   padding: 0 5px;
-  color: #cccccc;
+  color: #767676;
 }
 #breadcrumbs > .active {
-  color: #777777;
+  color: #767676;
+}
+
+/* Override Bootstrap print styles */
+@media print {
+    img {
+        max-width: 100% !important;
+    }
+    body {
+        margin-top: 0 !important;
+    }
+    #fixed-masthead {
+        position: relative;
+        background-color: #882345;
+    }
+    #navbar-header-toggle {
+        position: relative;
+        float: right;
+    }
+    #navbar-dept-link {
+        display: block !important;
+    }
+    #scroll-top {
+        display: none !important;
+    }
 }
